test/e2e/app-dir/errors/app/server-component/page.js
export const revalidate = 0

export default function Page() {
  throw new Error('this is a test')
}
